# a2ed0f6138ae9c26927ed247300a0ce53787796d1d75de09ce5e1e3edf95e367_UITF_BUY_CLASSIFIER

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  learner.pkl  main.py  metadata.json  pyproject.toml  requirements.txt
data/: ATRGFNP_hist.csv  ATRGFNP_hist_with_buy_signals.csv
deploy/airflow/config/: airflow.cfg
deploy/airflow/dags/: ml_pipeline_dag.py
deploy/docker/: dockerfile  dockerfile_trial
logs/: model_feature_importance.csv  model_leaderboard.csv
models/: NeuralNetFastAImodel-internals.pkl  scaler.pkl  trainer.pkl
models/CatBoost/: model.pkl
models/ExtraTreesEntr/: model.pkl
models/KNeighborsDist/: model.pkl
models/KNeighborsUnif/: model.pkl
models/LightGBM/: model.pkl
models/LightGBMLarge/: model.pkl
models/LightGBMXT/: model.pkl
models/NeuralNetFastAI/: model.pkl
models/NeuralNetTorch/: model.pkl
models/RandomForestEntr/: model.pkl
models/RandomForestGini/: model.pkl
models/WeightedEnsemble_L2/: model.pkl
models/WeightedEnsemble_L2/utils/: model_template.pkl  oof.pkl
models/XGBoost/: model.pkl  xgb.ubj
src/: data_preprocessing.py  evaluation.py  feature_engineering.py  model_training.py  run_pipeline.py
utils/attr/CatBoost/: y_pred_proba_val.pkl
utils/attr/ExtraTreesEntr/: y_pred_proba_val.pkl
utils/attr/ExtraTreesGini/: y_pred_proba_val.pkl
utils/attr/KNeighborsDist/: y_pred_proba_val.pkl
utils/attr/KNeighborsUnif/: y_pred_proba_val.pkl
utils/attr/LightGBM/: y_pred_proba_val.pkl
utils/attr/LightGBMLarge/: y_pred_proba_val.pkl
utils/data/: X.pkl  X_val.pkl  y.pkl  y_val.pkl
(+6 files in other folders)
