[project]
name = "a2ed0f6138ae9c26927ed247300a0ce53787796d1d75de09ce5e1e3edf95e367-uitf-buy-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "pandas==2.0.0",
    "scikit-learn==1.3.0",
    "autogluon-tabular==1.0.0",
    "autogluon==1.0.0",
    "ipykernel>=6.29.5"
]
